--- a/poem-element.html
+++ b/poem-element.html
@@ -61,17 +61,11 @@
         return {
           wrapLines: {
             type: Boolean,
-            value: false,
-            //readOnly: true,
-            //reflectToAttribute: true
+            value: false
           },
           lineNumbers: {
             type: Boolean,
             value: false,
-          },
-          lineNumberMultiple: {
-            type: Number,
-            value: 5
           }
         }
       }
